# mppencoder

./: CMakeLists.txt
inc/: mpi_enc_utils.h
include/: common.h  mppEncoder.hpp
src/: main.cpp  mppEncoder.cpp
utils/: CMakeLists.txt  mpp_opt.c
